DONE https://github.com/mprinc/KnAllEdge/issues/110: - ng1 -> ng2 - small screen visibility and all UI interactions and functionality

--- a/src/frontend/app/components/mapsList/sass/maps-list.component.scss
+++ b/src/frontend/app/components/mapsList/sass/maps-list.component.scss
@@ -10,8 +10,10 @@ h1{
 $heading_background_color: #aaaaff;
 $item_background_color: #a2a2a2;
 $item_even_background_color: #888888;
-$item_selected_background_color: #c8c8c8;
-$item_over_background_color: #e1e1e1;
+$active_color: #000080;
+$over_color: #0000ff;
+// $item_selected_background_color: #c8c8c8;
+// $item_over_background_color: #e1e1e1;
 
 // font-size: 1em;
 
@@ -47,10 +49,10 @@ $item_over_background_color: #e1e1e1;
 
 			&:hover{
 			 cursor: pointer;
-			 background-color: $item_over_background_color;
+			 background-color: mix($item_even_background_color, $over_color, 85%);
 		 	}
 			&.active-selection{
-				background-color: $item_selected_background_color;
+				background-color: mix($item_even_background_color, $active_color, 85%);
 			}
 		}
 		@media (max-width: 960px) { /* adding straps in column view (small-screens)*/
@@ -64,6 +66,13 @@ $item_over_background_color: #e1e1e1;
 			  background-color: $heading_background_color;
 				font-weight: bold;
 			}
+			/* another approach for headers in mobile-version
+			.item_property:nth-of-type(2):before { content: "Id"; }
+			.item_property:nth-of-type(3):before { content: "Actions"; }
+			.item_property:nth-of-type(4):before { content: "Authors"; }
+			.item_property:nth-of-type(5):before { content: "Type"; }
+			.item_property:nth-of-type(7):before { content: "Created"; }
+			*/
 		}
 		.item_property{
 			/* NECESSARY FOR EQUAL WIDTH OF ALL CELLS IN A COLUMN */
@@ -81,30 +90,63 @@ $item_over_background_color: #e1e1e1;
 			// margin: 0.5px;
 			padding: 3px;
 
-			// flex-grow: 1;
-
-			// &:nth-child(even) {background-color: $item_even_background_color;}
-			// @include flex-grow(1);
-	    // @include flex-basis(0);
-	    // @include word-wrap;
-			// word-break: break-word;
-
-			// &.l{
-			// 	flex-grow: 1.5;
-			// }
-			// &.xl{
-			// 	flex-grow: 2;
-			// }
-			// &.s{
-			// 	flex-grow: 0.5;
-			// }
-			// &.xs{
-			// 	flex-grow: 0.25;
-			// }
+			/* another approach for headers in mobile-version
+			&:before {
+				width: 100px; //35%;
+				padding-right: 10px;
+				white-space: nowrap;
+				border-right: 1px solid darken($item_background_color, 35%);
+			}
+			*/
 
 			/* NECESSARRY for cases when we hide some columns so that sum of thei `flex` paramethers (widths) is not === 100 */
 			max-width: 100%;
+
 			min-height: 1em;
+
+			.item_header{
+				padding-right: 10px;
+				white-space: nowrap;
+				border-right: 1px solid darken($item_background_color, 35%);
+
+				/* TODO still not breaking words */
+				word-wrap: break-word;
+			  overflow-wrap: break-word;
+			  word-break: break-all;
+			  word-break: break-word;
+			}
+			@media (max-width: 960px) {
+				.item_data{
+					padding-left: 10px;
+				}
+			}
+		}
+	}
+	@media (max-width: 960px) { /* adding  hover and selectd for mobile-view*/
+		.item{
+			&.active-selection{
+				.item_property:nth-of-type(even) {
+					background-color: mix($item_even_background_color, $active_color, 85%);
+				}
+				.item_property:nth-of-type(odd) {
+					background-color:mix($item_background_color, $active_color, 85%);
+				}
+				.item_property:first-of-type {
+					background-color: $heading_background_color;
+				}
+			}
+			&:hover{
+				cursor: pointer;
+				.item_property:nth-of-type(even) {
+					background-color: mix($item_even_background_color, $over_color, 85%);
+				}
+				.item_property:nth-of-type(odd) {
+					background-color: mix($item_background_color, $over_color, 85%);
+				}
+				.item_property:first-of-type {
+				  background-color: $heading_background_color;
+				}
+			}
 		}
 	}
 }
@@ -112,17 +154,3 @@ $item_over_background_color: #e1e1e1;
 .buttons{
 	text-align: left;
 }
-
-	/*
-	Label the data
-	td:nth-of-type(1):before { content: "First Name"; }
-	td:nth-of-type(2):before { content: "Last Name"; }
-	td:nth-of-type(3):before { content: "Job Title"; }
-	td:nth-of-type(4):before { content: "Favorite Color"; }
-	td:nth-of-type(5):before { content: "Wars of Trek?"; }
-	td:nth-of-type(6):before { content: "Porn Name"; }
-	td:nth-of-type(7):before { content: "Date of Birth"; }
-	td:nth-of-type(8):before { content: "Dream Vacation City"; }
-	td:nth-of-type(9):before { content: "GPA"; }
-	td:nth-of-type(10):before { content: "Arbitrary Data"; }
-	*/
